--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "start": "node -r dotenv-flow/config --es-module-specifier-resolution=node dist/server.js",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "test": "jest",
     "lint": "eslint src --color",
     "lint-fix": "eslint src --color --fix"
@@ -33,6 +33,7 @@
     "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
@@ -40,6 +41,7 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.6",
     "ts-jest": "^29.0.5",
+    "tsc-alias": "^1.8.4",
     "typescript": "^5.0.2"
   }
 }
