--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,9 +47,9 @@
     "webpack-dev-server": "^4.13.1"
   },
   "dependencies": {
+    "@navikt/aksel-icons": "^2.8.3",
     "@navikt/ds-css": "^2.8.3",
     "@navikt/ds-css-internal": "^2.8.3",
-    "@navikt/ds-icons": "^2.8.3",
     "@navikt/ds-react": "^2.8.3",
     "@navikt/ds-react-internal": "^2.8.3",
     "@navikt/fnrvalidator": "^1.3.0",
