--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -62,6 +62,9 @@ spec:
   envFrom:
     - secret: kabal-session-key
     - secret: slack-url
+  redis:
+    - instance: obo-cache
+      access: readwrite
   liveness:
     path: /isAlive
     initialDelay: 3
