--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "fastify-metrics": "11.0.0",
     "jose": "5.6.3",
     "openid-client": "5.6.5",
-    "prom-client": "15.1.3"
+    "prom-client": "15.1.3",
+    "redis": "^4.6.15"
   },
   "devDependencies": {
     "@eslint/js": "9.6.0",
