--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@fastify/http-proxy": "9.5.0",
     "@fastify/type-provider-typebox": "4.0.0",
     "@fastify/websocket": "^10.0.1",
+    "@hocuspocus/extension-logger": "^2.13.5",
     "@hocuspocus/extension-redis": "^2.13.5",
     "@hocuspocus/server": "^2.13.5",
     "@slate-yjs/core": "^1.0.2",
