--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -66,7 +66,9 @@ spec:
     - instance: obo-cache
       access: readwrite
     - instance: collaboration
-      access: readwrite
+      access: admin
+    - instance: collaboration2
+      access: admin
   liveness:
     path: /isAlive
     initialDelay: 3
