--- a/server/package.json
+++ b/server/package.json
@@ -32,11 +32,13 @@
     "openid-client": "5.6.5",
     "prom-client": "15.1.3",
     "redis": "^4.7.0",
+    "uuid": "^10.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@eslint/js": "9.9.0",
     "@types/bun": "1.1.6",
+    "@types/uuid": "^10.0.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
