--- a/server/package.json
+++ b/server/package.json
@@ -17,30 +17,27 @@
     "@fastify/cors": "9.0.1",
     "@fastify/http-proxy": "9.5.0",
     "@fastify/type-provider-typebox": "4.1.0",
-    "@fastify/websocket": "^10.0.1",
-    "@hocuspocus/extension-redis": "^2.13.5",
-    "@hocuspocus/server": "^2.13.5",
-    "@slate-yjs/core": "^1.0.2",
-    "@types/node": "22.4.1",
-    "dotenv-flow": "4.1.0",
+    "@hocuspocus/extension-redis": "2.13.5",
+    "@hocuspocus/server": "2.13.5",
+    "@slate-yjs/core": "1.0.2",
+    "@types/node": "22.5.4",
     "fastify": "4.28.1",
     "fastify-metrics": "11.0.0",
-    "ioredis": "^5.4.1",
-    "jose": "5.6.3",
-    "openid-client": "5.6.5",
+    "jose": "5.8.0",
+    "openid-client": "5.7.0",
     "prom-client": "15.1.3",
-    "redis": "^4.7.0",
-    "ws": "^8.18.0"
+    "redis": "4.7.0",
+    "ws": "8.18.0"
   },
   "devDependencies": {
-    "@eslint/js": "9.9.0",
-    "@types/bun": "1.1.6",
-    "@types/uuid": "^10.0.0",
+    "@eslint/js": "9.10.0",
+    "@types/bun": "1.1.8",
+    "@types/uuid": "10.0.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
     "globals": "15.9.0",
     "typescript": "5.5.4",
-    "typescript-eslint": "8.1.0"
+    "typescript-eslint": "8.4.0"
   }
 }
