--- a/server/package.json
+++ b/server/package.json
@@ -14,30 +14,29 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@fastify/cors": "9.0.1",
-    "@fastify/http-proxy": "9.5.0",
-    "@fastify/type-provider-typebox": "4.1.0",
-    "@hocuspocus/common": "^2.13.5",
-    "@hocuspocus/extension-redis": "2.13.5",
-    "@hocuspocus/server": "2.13.5",
+    "@fastify/cors": "10.0.1",
+    "@fastify/http-proxy": "10.0.0",
+    "@fastify/type-provider-typebox": "5.0.0",
+    "@hocuspocus/common": "2.13.6",
+    "@hocuspocus/server": "2.13.6",
     "@slate-yjs/core": "1.0.2",
-    "@types/node": "22.5.4",
-    "fastify": "4.28.1",
-    "fastify-metrics": "11.0.0",
-    "jose": "5.8.0",
+    "@types/node": "22.5.5",
+    "fastify": "5.0.0",
+    "fastify-metrics": "12.1.0",
+    "jose": "4.15.9",
     "openid-client": "5.7.0",
     "prom-client": "15.1.3",
     "redis": "4.7.0"
   },
   "devDependencies": {
-    "@eslint/js": "9.10.0",
-    "@types/bun": "1.1.9",
+    "@eslint/js": "9.11.0",
+    "@types/bun": "1.1.10",
     "@types/uuid": "10.0.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
     "globals": "15.9.0",
     "typescript": "5.6.2",
-    "typescript-eslint": "8.5.0"
+    "typescript-eslint": "8.6.0"
   }
 }
