--- a/.github/workflows/deploy-to-dev.yaml
+++ b/.github/workflows/deploy-to-dev.yaml
@@ -53,9 +53,11 @@ jobs:
       
       - name: Install frontend dependencies
         shell: bash
+        env:
+          BUN_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
         run: |
           cd frontend
-          echo -e "\n[install.scopes]\n\"@navikt\" = { token = \"${{ secrets.READER_TOKEN }}\", url = \"https://npm.pkg.github.com/\" }" >> bunfig.toml
+          echo -e "\n[install.scopes]\n\"@navikt\" = { token = \"$BUN_AUTH_TOKEN\", url = \"https://npm.pkg.github.com/\" }" >> bunfig.toml
           bun install --frozen-lockfile
 
       - name: Build frontend
@@ -74,8 +76,11 @@ jobs:
       
       - name: Install server dependencies
         shell: bash
+        env:
+          BUN_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
         run: |
           cd server
+          echo -e "\n[install.scopes]\n\"@navikt\" = { token = \"$BUN_AUTH_TOKEN\", url = \"https://npm.pkg.github.com/\" }" >> bunfig.toml
           bun install --frozen-lockfile
       
       - name: Test server
