--- a/.github/workflows/sanity-build.yaml
+++ b/.github/workflows/sanity-build.yaml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
@@ -20,9 +21,11 @@ jobs:
           
       - name: Install ${{ matrix.apps }} dependencies
         shell: bash
+        env:
+          BUN_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
         run: |
           cd ${{ matrix.apps }}
-          echo -e "\n[install.scopes]\n\"@navikt\" = { token = \"${{ secrets.READER_TOKEN }}\", url = \"https://npm.pkg.github.com/\" }" >> bunfig.toml
+          echo -e "\n[install.scopes]\n\"@navikt\" = { token = \"$BUN_AUTH_TOKEN\", url = \"https://npm.pkg.github.com/\" }" >> bunfig.toml
           bun install --frozen-lockfile
           
       - name: Restore caches for ${{ matrix.apps }}
