--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,17 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@happy-dom/global-registrator": "15.7.4",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.2",
+    "@testing-library/react": "16.0.1",
     "@types/bun": "1.1.12",
+    "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "@types/react-redux": "7.1.34",
-    "@types/react": "18.3.12",
     "@vitejs/plugin-react": "4.3.3",
     "typescript": "5.6.3",
-    "vite-tsconfig-paths": "5.0.1",
-    "vite": "5.4.10"
+    "vite": "5.4.10",
+    "vite-tsconfig-paths": "5.0.1"
   },
   "dependencies": {
     "@grafana/faro-react": "1.11.0",
