--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,31 +12,31 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@happy-dom/global-registrator": "14.12.3",
-    "@types/bun": "1.1.11",
+    "@happy-dom/global-registrator": "15.7.4",
+    "@types/bun": "1.1.12",
     "@types/react-dom": "18.3.1",
     "@types/react-redux": "7.1.34",
-    "@types/react": "18.3.11",
+    "@types/react": "18.3.12",
     "@vitejs/plugin-react": "4.3.3",
     "typescript": "5.6.3",
-    "vite": "5.4.9",
-    "vite-tsconfig-paths": "5.0.1"
+    "vite-tsconfig-paths": "5.0.1",
+    "vite": "5.4.10"
   },
   "dependencies": {
     "@grafana/faro-react": "1.11.0",
     "@grafana/faro-web-sdk": "1.11.0",
     "@grafana/faro-web-tracing": "1.11.0",
     "@hocuspocus/provider": "2.13.7",
-    "@navikt/aksel-icons": "7.3.0",
-    "@navikt/ds-css": "7.3.0",
-    "@navikt/ds-react": "7.3.0",
+    "@navikt/aksel-icons": "7.4.0",
+    "@navikt/ds-css": "7.4.0",
+    "@navikt/ds-react": "7.4.0",
     "@navikt/fnrvalidator": "2.1.2",
     "@reduxjs/toolkit": "2.3.0",
     "@slate-yjs/core": "1.0.2",
     "@slate-yjs/react": "1.1.0",
     "@styled-icons/fluentui-system-regular": "10.47.0",
     "@types/qs": "6.9.16",
-    "@udecode/plate": "39.2.1",
+    "@udecode/plate": "39.2.4",
     "@udecode/plate-alignment": "39.0.0",
     "@udecode/plate-autoformat": "39.0.0",
     "@udecode/plate-basic-marks": "39.0.0",
@@ -44,7 +44,7 @@
     "@udecode/plate-common": "39.2.1",
     "@udecode/plate-core": "39.2.1",
     "@udecode/plate-cursor": "39.0.0",
-    "@udecode/plate-docx": "39.2.0",
+    "@udecode/plate-docx": "39.2.4",
     "@udecode/plate-font": "39.0.0",
     "@udecode/plate-heading": "39.0.0",
     "@udecode/plate-indent": "39.0.0",
@@ -60,8 +60,8 @@
     "react-router": "6.27.0",
     "react-router-dom": "6.27.0",
     "slate": "0.110.2",
-    "slate-history": "0.109.0",
-    "slate-react": "0.110.2",
+    "slate-history": "0.110.3",
+    "slate-react": "0.110.3",
     "styled-components": "6.1.13",
     "yjs": "13.6.20"
   }
