--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -6,7 +6,7 @@
     "quickfix.biome": "always",
     "source.fixAll.biome": "always",
     "source.organizeImports.biome": "always",
-    "source.addMissingImports.ts": "explicit"
+    "source.addMissingImports.ts": "never"
   },
   "editor.acceptSuggestionOnCommitCharacter": false,
   "typescript.validate.enable": true,
