--- a/.github/workflows/sanity-build.yaml
+++ b/.github/workflows/sanity-build.yaml
@@ -28,7 +28,7 @@ jobs:
           echo -e "\n[install.scopes]\n\"@navikt\" = { token = \"$BUN_AUTH_TOKEN\", url = \"https://npm.pkg.github.com/\" }" >> bunfig.toml
           bun install --frozen-lockfile
           
-      - name: Restore caches for ${{ matrix.apps }}
+      - name: Restore cache for ${{ matrix.apps }}
         uses: actions/cache/restore@v4
         with:
           path: |
@@ -53,7 +53,7 @@ jobs:
           cd ${{ matrix.apps }}
           bun test
 
-      - name: Save caches for ${{ matrix.apps }}
+      - name: Save cache for ${{ matrix.apps }}
         uses: actions/cache/save@v4
         if: always()
         with:
