--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "vite & tsc --watch",
     "build": "vite build",
-    "typecheck": "tsc",
+    "test": "bun test",
+    "typecheck": "tsc --noEmit",
     "lint": "biome check"
   },
   "license": "MIT",
